refactored use of partials so that single-use or limited-use partials are next to their associated views rather than in the shared directory; reorganized shared directory to reflect its more specific nature

--- a/assets/templates/forum-skeleton/ForumSkeletonMvc/Views/PostListing/All.cshtml
+++ b/assets/templates/forum-skeleton/ForumSkeletonMvc/Views/PostListing/All.cshtml
@@ -12,41 +12,19 @@
 <div class="row">
 
 	<div class="span4">
-		@RenderPage("~/Views/Shared/partials/PostTile.cshtml")
+		@RenderPage("_PostTile.cshtml")
 	</div>
 
 	<div class="span4">
-		@RenderPage("~/Views/Shared/partials/PostTile.cshtml")
+		@RenderPage("_PostTile.cshtml")
 	</div>
 
 	<div class="span4">
-		@RenderPage("~/Views/Shared/partials/PostTile.cshtml")
+		@RenderPage("_PostTile.cshtml")
 	</div>
 
 	<div class="span4">
-		@RenderPage("~/Views/Shared/partials/PostTile.cshtml")
-	</div>
-
-</div>
-
-<hr>
-
-<div class="row">
-
-	<div class="span4">
-		@RenderPage("~/Views/Shared/partials/PostTile.cshtml")
-	</div>
-
-	<div class="span4">
-		@RenderPage("~/Views/Shared/partials/PostTile.cshtml")
-	</div>
-
-	<div class="span4">
-		@RenderPage("~/Views/Shared/partials/PostTile.cshtml")
-	</div>
-
-	<div class="span4">
-		@RenderPage("~/Views/Shared/partials/PostTile.cshtml")
+		@RenderPage("_PostTile.cshtml")
 	</div>
 
 </div>
@@ -56,19 +34,19 @@
 <div class="row">
 
 	<div class="span4">
-		@RenderPage("~/Views/Shared/partials/PostTile.cshtml")
+		@RenderPage("_PostTile.cshtml")
 	</div>
 
 	<div class="span4">
-		@RenderPage("~/Views/Shared/partials/PostTile.cshtml")
+		@RenderPage("_PostTile.cshtml")
 	</div>
 
 	<div class="span4">
-		@RenderPage("~/Views/Shared/partials/PostTile.cshtml")
+		@RenderPage("_PostTile.cshtml")
 	</div>
 
 	<div class="span4">
-		@RenderPage("~/Views/Shared/partials/PostTile.cshtml")
+		@RenderPage("_PostTile.cshtml")
 	</div>
 
 </div>
@@ -78,19 +56,41 @@
 <div class="row">
 
 	<div class="span4">
-		@RenderPage("~/Views/Shared/partials/PostTile.cshtml")
+		@RenderPage("_PostTile.cshtml")
 	</div>
 
 	<div class="span4">
-		@RenderPage("~/Views/Shared/partials/PostTile.cshtml")
+		@RenderPage("_PostTile.cshtml")
 	</div>
 
 	<div class="span4">
-		@RenderPage("~/Views/Shared/partials/PostTile.cshtml")
+		@RenderPage("_PostTile.cshtml")
 	</div>
 
 	<div class="span4">
-		@RenderPage("~/Views/Shared/partials/PostTile.cshtml")
+		@RenderPage("_PostTile.cshtml")
+	</div>
+
+</div>
+
+<hr>
+
+<div class="row">
+
+	<div class="span4">
+		@RenderPage("_PostTile.cshtml")
+	</div>
+
+	<div class="span4">
+		@RenderPage("_PostTile.cshtml")
+	</div>
+
+	<div class="span4">
+		@RenderPage("_PostTile.cshtml")
+	</div>
+
+	<div class="span4">
+		@RenderPage("_PostTile.cshtml")
 	</div>
 
 </div>
