--- a/assets/templates/forum-skeleton/ForumSkeletonMvc/Views/PostListing/Controversial.cshtml
+++ b/assets/templates/forum-skeleton/ForumSkeletonMvc/Views/PostListing/Controversial.cshtml
@@ -10,40 +10,40 @@
 <!-- controversial posts -->
 <div class="row">
 	<div class="span8">
-		@RenderPage("~/Views/Shared/partials/PostTile.cshtml")
+		@RenderPage("_PostTile.cshtml")
 	</div>
 	<div class="span8">
-		@RenderPage("~/Views/Shared/partials/PostTile.cshtml")
+		@RenderPage("_PostTile.cshtml")
 	</div>
 </div>
 <hr>
 <div class="row">
 	<div class="span4">
-		@RenderPage("~/Views/Shared/partials/PostTile.cshtml")
+		@RenderPage("_PostTile.cshtml")
 	</div>
 	<div class="span4">
-		@RenderPage("~/Views/Shared/partials/PostTile.cshtml")
+		@RenderPage("_PostTile.cshtml")
 	</div>
 	<div class="span4">
-		@RenderPage("~/Views/Shared/partials/PostTile.cshtml")
+		@RenderPage("_PostTile.cshtml")
 	</div>
 	<div class="span4">
-		@RenderPage("~/Views/Shared/partials/PostTile.cshtml")
+		@RenderPage("_PostTile.cshtml")
 	</div>
 </div>
 <hr>
 <div class="row">
 	<div class="span4">
-		@RenderPage("~/Views/Shared/partials/PostTile.cshtml")
+		@RenderPage("_PostTile.cshtml")
 	</div>
 	<div class="span4">
-		@RenderPage("~/Views/Shared/partials/PostTile.cshtml")
+		@RenderPage("_PostTile.cshtml")
 	</div>
 	<div class="span4">
-		@RenderPage("~/Views/Shared/partials/PostTile.cshtml")
+		@RenderPage("_PostTile.cshtml")
 	</div>
 	<div class="span4">
-		@RenderPage("~/Views/Shared/partials/PostTile.cshtml")
+		@RenderPage("_PostTile.cshtml")
 	</div>
 </div>
 <hr>
