--- a/assets/templates/forum-skeleton/ForumSkeletonMvc/Views/Profile/Badges.cshtml
+++ b/assets/templates/forum-skeleton/ForumSkeletonMvc/Views/Profile/Badges.cshtml
@@ -11,7 +11,7 @@
 </ul>
 <h1>{Username}'s Badges</h1>
 <hr />
-@RenderPage("~/Views/Shared/partials/ProfileTabs.cshtml")
+@RenderPage("_Tabs.cshtml")
 
 <div class="row">
 
