--- a/assets/templates/forum-skeleton/ForumSkeletonMvc/Views/Profile/Friends.cshtml
+++ b/assets/templates/forum-skeleton/ForumSkeletonMvc/Views/Profile/Friends.cshtml
@@ -11,7 +11,7 @@
 </ul>
 <h1>{Username}'s Friends</h1>
 <hr />
-@RenderPage("~/Views/Shared/partials/ProfileTabs.cshtml")
+@RenderPage("_Tabs.cshtml")
 <p>{Username} has 8 friends.</p>
 <table class="zebra-striped">
 	<tbody>
