--- a/assets/templates/forum-skeleton/ForumSkeletonMvc/Views/Profile/Overview.cshtml
+++ b/assets/templates/forum-skeleton/ForumSkeletonMvc/Views/Profile/Overview.cshtml
@@ -10,8 +10,8 @@
 </ul>
 <h1>{Username}'s Profile</h1>
 <hr />
-@RenderPage("~/Views/Shared/partials/ProfileTabs.cshtml")
 
+@RenderPage("_Tabs.cshtml")
 <div class="row">
 
 	<div class="span3">
