--- a/assets/templates/forum-skeleton/ForumSkeletonMvc/Views/Profile/RecentActivity.cshtml
+++ b/assets/templates/forum-skeleton/ForumSkeletonMvc/Views/Profile/RecentActivity.cshtml
@@ -11,7 +11,7 @@
 </ul>
 <h1>{Username}'s Recent Activity</h1>
 <hr />
-@RenderPage("~/Views/Shared/partials/ProfileTabs.cshtml")
+@RenderPage("_Tabs.cshtml")
 @for (var i = 1; i < 11; i++)
 {
 	<div class="row">
