--- a/assets/templates/forum-skeleton/ForumSkeletonMvc/Views/Shared/_ForumLayout.cshtml
+++ b/assets/templates/forum-skeleton/ForumSkeletonMvc/Views/Shared/_ForumLayout.cshtml
@@ -10,10 +10,10 @@
 	@RenderSection("HeadContent", false)
 </head>
 <body>
-	@RenderPage("~/Views/Shared/partials/TopBar.cshtml")
+	@RenderPage("~/Views/Shared/TopBar.cshtml")
 
 	<div class="container-fluid">
-		@RenderPage("~/Views/Shared/partials/Sidebar.cshtml")
+		@RenderPage("~/Views/Shared/SideBar.cshtml")
 
 		<div class="content">
 			@RenderBody()
