--- a/assets/templates/forum-skeleton/ForumSkeletonMvc/Views/PostListing/Popular.cshtml
+++ b/assets/templates/forum-skeleton/ForumSkeletonMvc/Views/PostListing/Popular.cshtml
@@ -27,11 +27,11 @@
 <div class="row">
 
 	<div class="span10">
-		@RenderPage("~/Views/Shared/partials/PostTile.cshtml")
+		@RenderPage("_PostTile.cshtml")
 	</div>
 
 	<div class="span6">
-		@RenderPage("~/Views/Shared/partials/PostTile.cshtml")
+		@RenderPage("_PostTile.cshtml")
 	</div>
 
 </div>
@@ -41,11 +41,11 @@
 <div class="row">
 
 	<div class="span8">
-		@RenderPage("~/Views/Shared/partials/PostTile.cshtml")
+		@RenderPage("_PostTile.cshtml")
 	</div>
 
 	<div class="span8">
-		@RenderPage("~/Views/Shared/partials/PostTile.cshtml")
+		@RenderPage("_PostTile.cshtml")
 	</div>
 
 </div>
@@ -55,19 +55,19 @@
 <div class="row">
 
 	<div class="span4">
-		@RenderPage("~/Views/Shared/partials/PostTile.cshtml")
+		@RenderPage("_PostTile.cshtml")
 	</div>
 
 	<div class="span4">
-		@RenderPage("~/Views/Shared/partials/PostTile.cshtml")
+		@RenderPage("_PostTile.cshtml")
 	</div>
 
 	<div class="span4">
-		@RenderPage("~/Views/Shared/partials/PostTile.cshtml")
+		@RenderPage("_PostTile.cshtml")
 	</div>
 
 	<div class="span4">
-		@RenderPage("~/Views/Shared/partials/PostTile.cshtml")
+		@RenderPage("_PostTile.cshtml")
 	</div>
 
 </div>
