--- a/assets/templates/forum-skeleton/ForumSkeletonMvc/Views/PostListing/_PostTile.cshtml
+++ b/assets/templates/forum-skeleton/ForumSkeletonMvc/Views/PostListing/_PostTile.cshtml
@@ -1,19 +1,62 @@
-﻿<div style="padding-top: 25px; padding-left: 5px; padding-right: 5px; padding-bottom: 5px;
+﻿@{
+	var header = "h2";
+	var button = "btn";
+	var text = "";
+	var textLength = 50;
+}
+
+@if (Page.Size.ToLower() == "XLarge".ToLower())
+{
+	header = "h2";
+	button = "btn";
+	text = "";
+	textLength = 50;
+}
+else if (Page.Size.ToLower() == "Large".ToLower())
+{
+	header = "h2";
+	button = "btn";
+	text = "";
+	textLength = 30;
+}
+else if (Page.Size.ToLower() == "Medium".ToLower())
+{
+	header = "h3";
+	button = "btn";
+	text = "";
+	textLength = 25;
+}
+else if (Page.Size.ToLower() == "Small".ToLower())
+{
+	header = "h3";
+	button = "btn small";
+	text = "font-size: smaller;";
+	textLength = 20;
+} 
+
+<div class="@Page.Size.ToLower()" style="padding-top: 25px; padding-left: 5px; padding-right: 5px; padding-bottom: 5px;
 	float: right; clear: left;">
 	<img src="../../Themes/default/images/arrow-090.png" /><br />
 	<img src="../../Themes/default/images/arrow-270.png" /><br />
 	<img src="../../Themes/default/images/exclamation-white.png" /><br />
 </div>
-<h2>
-	<a href="@Url.RouteUrl("Post", new { categorySlug = "my-category", postSlug = "post-title"})">{Post Title}</a></h2>
-<p>
-	Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio
-	sem nec elit. Etiam porta sem malesuada magna mollis euismod. Integer posuere erat
-	a ante venenatis dapibus posuere velit aliquet. &mdash; <span style="text-align: right;
+<@header>
+	<a href="@Url.RouteUrl("Post", new { categorySlug = "my-category", postSlug = "post-title" })">{Post Title}</a></@header>
+<p style="@text">@truncate("Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed quis ante in ipsum pharetra tempus a vel mi. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Aenean aliquet magna eget lacus accumsan faucibus. Etiam varius tortor vitae ligula rutrum placerat auctor elit iaculis. Ut lectus justo.", textLength) 
+&mdash; <span style="text-align: right;
 		font-size: smaller;"><em>12:59 PM 12/31/2011</em> in <a href="@Url.RouteUrl("Category", new { categorySlug = "category"})" class="label">
 			Another Category</a></span></p>
 <p>
 	<span style="padding-top: 7px; text-align: right; font-size: smaller;">
 		<img src="../../Themes/default/images/balloon-white.png" />
-		<a href="#">999 comments</a></span>&nbsp;&nbsp;&nbsp;<a class="btn" href="#">Add comment &raquo;</a>
+		<a href="#">999 comments</a></span>&nbsp;&nbsp;&nbsp;<a class="@button" href="#">Add comment &raquo;</a>
 </p>
+
+@helper truncate(string text, int numberOfWords){
+	
+	var words = text.Split(' ');
+
+	var truncatedWords = words.Take(numberOfWords).ToArray();
+	
+	@String.Join(" ", truncatedWords)
+}
