--- a/assets/templates/forum-skeleton/ForumSkeletonMvc/Views/Post/Detail.cshtml
+++ b/assets/templates/forum-skeleton/ForumSkeletonMvc/Views/Post/Detail.cshtml
@@ -122,7 +122,7 @@
 		<div class="row">
 
 			<div class="span6">
-				<h2>Comments</h2>
+				<h2>Comments</h2><a name="comments"></a>
 			</div>
 
 			<div class="span6">
