--- a/assets/templates/forum-skeleton/ForumSkeletonMvc/Views/PostListing/_PostTile.cshtml
+++ b/assets/templates/forum-skeleton/ForumSkeletonMvc/Views/PostListing/_PostTile.cshtml
@@ -1,6 +1,7 @@
 ﻿@{
 	var header = "h2";
 	var button = "btn";
+	var arrowSize = "";
 	var text = "";
 	var textLength = 50;
 }
@@ -9,6 +10,7 @@
 {
 	header = "h2";
 	button = "btn";
+	arrowSize = "";
 	text = "";
 	textLength = 50;
 }
@@ -16,6 +18,7 @@ else if (Page.Size.ToLower() == "Large".ToLower())
 {
 	header = "h2";
 	button = "btn";
+	arrowSize = "";
 	text = "";
 	textLength = 30;
 }
@@ -23,6 +26,7 @@ else if (Page.Size.ToLower() == "Medium".ToLower())
 {
 	header = "h3";
 	button = "btn";
+	arrowSize = "-medium";
 	text = "";
 	textLength = 25;
 }
@@ -30,14 +34,15 @@ else if (Page.Size.ToLower() == "Small".ToLower())
 {
 	header = "h3";
 	button = "btn small";
+	arrowSize = "-medium";
 	text = "font-size: smaller;";
 	textLength = 20;
 } 
 
 <div class="@Page.Size.ToLower()" style="padding-top: 25px; padding-left: 5px; padding-right: 5px; padding-bottom: 5px;
 	float: right; clear: left;">
-	<img src="../../Themes/default/images/arrow-090.png" /><br />
-	<img src="../../Themes/default/images/arrow-270.png" /><br />
+	<img src="../../Themes/default/images/arrow-090@{@arrowSize}.png" /><br />
+	<img src="../../Themes/default/images/arrow-270@{@arrowSize}.png" /><br />
 	<img src="../../Themes/default/images/exclamation-white.png" /><br />
 </div>
 <@header>
@@ -49,7 +54,7 @@ else if (Page.Size.ToLower() == "Small".ToLower())
 <p>
 	<span style="padding-top: 7px; text-align: right; font-size: smaller;">
 		<img src="../../Themes/default/images/balloon-white.png" />
-		<a href="#">999 comments</a></span>&nbsp;&nbsp;&nbsp;<a class="@button" href="#">Add comment &raquo;</a>
+		<a href="@Url.RouteUrl("Post", new { categorySlug = "my-category", postSlug = "post-title" })#comments">999 comments</a></span>&nbsp;&nbsp;&nbsp;<a class="@button" href="#">Add comment &raquo;</a>
 </p>
 
 @helper truncate(string text, int numberOfWords){
