moved post tile partial to shared so it can be used from tags and categories

--- a/assets/templates/forum-skeleton/ForumSkeletonMvc/Views/PostListing/All.cshtml
+++ b/assets/templates/forum-skeleton/ForumSkeletonMvc/Views/PostListing/All.cshtml
@@ -12,41 +12,19 @@
 <div class="row">
 
 	<div class="span4">
-		@RenderPage("_PostTile.cshtml", new { Size = "Small" })
+		@RenderPage("~/Views/Shared/_PostTile.cshtml", new { Size = "Small" })
 	</div>
 
 	<div class="span4">
-		@RenderPage("_PostTile.cshtml", new { Size = "Small" })
+		@RenderPage("~/Views/Shared/_PostTile.cshtml", new { Size = "Small" })
 	</div>
 
 	<div class="span4">
-		@RenderPage("_PostTile.cshtml", new { Size = "Small" })
+		@RenderPage("~/Views/Shared/_PostTile.cshtml", new { Size = "Small" })
 	</div>
 
 	<div class="span4">
-		@RenderPage("_PostTile.cshtml", new { Size = "Small" })
-	</div>
-
-</div>
-
-<hr>
-
-<div class="row">
-
-	<div class="span4">
-		@RenderPage("_PostTile.cshtml", new { Size = "Small" })
-	</div>
-
-	<div class="span4">
-		@RenderPage("_PostTile.cshtml", new { Size = "Small" })
-	</div>
-
-	<div class="span4">
-		@RenderPage("_PostTile.cshtml", new { Size = "Small" })
-	</div>
-
-	<div class="span4">
-		@RenderPage("_PostTile.cshtml", new { Size = "Small" })
+		@RenderPage("~/Views/Shared/_PostTile.cshtml", new { Size = "Small" })
 	</div>
 
 </div>
@@ -56,19 +34,19 @@
 <div class="row">
 
 	<div class="span4">
-		@RenderPage("_PostTile.cshtml", new { Size = "Small" })
+		@RenderPage("~/Views/Shared/_PostTile.cshtml", new { Size = "Small" })
 	</div>
 
 	<div class="span4">
-		@RenderPage("_PostTile.cshtml", new { Size = "Small" })
+		@RenderPage("~/Views/Shared/_PostTile.cshtml", new { Size = "Small" })
 	</div>
 
 	<div class="span4">
-		@RenderPage("_PostTile.cshtml", new { Size = "Small" })
+		@RenderPage("~/Views/Shared/_PostTile.cshtml", new { Size = "Small" })
 	</div>
 
 	<div class="span4">
-		@RenderPage("_PostTile.cshtml", new { Size = "Small" })
+		@RenderPage("~/Views/Shared/_PostTile.cshtml", new { Size = "Small" })
 	</div>
 
 </div>
@@ -78,19 +56,41 @@
 <div class="row">
 
 	<div class="span4">
-		@RenderPage("_PostTile.cshtml", new { Size = "Small" })
+		@RenderPage("~/Views/Shared/_PostTile.cshtml", new { Size = "Small" })
 	</div>
 
 	<div class="span4">
-		@RenderPage("_PostTile.cshtml", new { Size = "Small" })
+		@RenderPage("~/Views/Shared/_PostTile.cshtml", new { Size = "Small" })
 	</div>
 
 	<div class="span4">
-		@RenderPage("_PostTile.cshtml", new { Size = "Small" })
+		@RenderPage("~/Views/Shared/_PostTile.cshtml", new { Size = "Small" })
 	</div>
 
 	<div class="span4">
-		@RenderPage("_PostTile.cshtml", new { Size = "Small" })
+		@RenderPage("~/Views/Shared/_PostTile.cshtml", new { Size = "Small" })
+	</div>
+
+</div>
+
+<hr>
+
+<div class="row">
+
+	<div class="span4">
+		@RenderPage("~/Views/Shared/_PostTile.cshtml", new { Size = "Small" })
+	</div>
+
+	<div class="span4">
+		@RenderPage("~/Views/Shared/_PostTile.cshtml", new { Size = "Small" })
+	</div>
+
+	<div class="span4">
+		@RenderPage("~/Views/Shared/_PostTile.cshtml", new { Size = "Small" })
+	</div>
+
+	<div class="span4">
+		@RenderPage("~/Views/Shared/_PostTile.cshtml", new { Size = "Small" })
 	</div>
 
 </div>
