--- a/assets/templates/forum-skeleton/ForumSkeletonMvc/Views/Category/Detail.cshtml
+++ b/assets/templates/forum-skeleton/ForumSkeletonMvc/Views/Category/Detail.cshtml
@@ -15,59 +15,11 @@
 <div class="row">
 
 	<div class="span8">
-
-		<div style="padding-top: 25px; padding-left: 5px; padding-right: 5px; padding-bottom: 5px;
-			float: right; clear: left;">
-			<img src="../../Themes/default/images/arrow-090.png" /><br />
-			<img src="../../Themes/default/images/arrow-270.png" /><br />
-			<img src="../../Themes/default/images/exclamation-white.png" /><br />
-		</div>
-
-		<h2><a href="@Url.RouteUrl("Post", new { categorySlug = "my-category", postSlug = "post-title"})">{Post Title}</a></h2>
-		<p>Etiam porta sem malesuada magna mollis euismod. Integer posuere erat a ante venenatis
-			dapibus posuere. Etiam porta sem malesuada magna mollis euismod. &mdash; <span style="text-align: right;
-				font-size: smaller;"><em>12:59 PM 12/31/2011</em> in <a href="@Url.RouteUrl("Category", new { categorySlug = "placeholder-category" })" class="label">
-				Placeholder Category</span></a></p>
-
-		<div class="row">
-
-			<div class="span4">
-				<a class="btn" href="#">Add comment &raquo;</a></div>
-
-			<div class="span4" style="padding-top: 7px; text-align: right; font-size: smaller;">
-				<img src="../../Themes/default/images/balloon-white.png" />
-				<a href="#">999 comments</a></div>
-
-		</div>
-
+		@RenderPage("~/Views/Shared/_PostTile.cshtml", new { Size = "Large" })
 	</div>
 
 	<div class="span8">
-
-		<div style="padding-top: 25px; padding-left: 5px; padding-right: 5px; padding-bottom: 5px;
-			float: right; clear: left;">
-			<img src="../../Themes/default/images/arrow-090.png" /><br />
-			<img src="../../Themes/default/images/arrow-270.png" /><br />
-			<img src="../../Themes/default/images/exclamation-white.png" /><br />
-		</div>
-
-		<h2><a href="@Url.RouteUrl("Post", new { categorySlug = "my-category", postSlug = "post-title"})">{Post Title}</a></h2>
-		<p>Etiam porta sem malesuada magna mollis euismod. Integer posuere erat a ante venenatis
-			dapibus posuere. Etiam porta sem malesuada magna mollis euismod. &mdash; <span style="text-align: right;
-				font-size: smaller;"><em>12:59 PM 12/31/2011</em> in <a href="@Url.RouteUrl("Category", new { categorySlug = "placeholder-category" })" class="label">
-					Another Category</a></p>
-
-		<div class="row">
-
-			<div class="span4">
-				<a class="btn small" href="#">Add comment &raquo;</a></div>
-
-			<div class="span4" style="padding-top: 7px; text-align: right; font-size: smaller;">
-				<img src="../../Themes/default/images/balloon-white.png" />
-				<a href="#">999 comments</a></div>
-
-		</div>
-
+		@RenderPage("~/Views/Shared/_PostTile.cshtml", new { Size = "Large" })
 	</div>
 
 </div>
@@ -77,59 +29,11 @@
 <div class="row">
 
 	<div class="span8">
-
-		<div style="padding-top: 25px; padding-left: 5px; padding-right: 5px; padding-bottom: 5px;
-			float: right; clear: left;">
-			<img src="../../Themes/default/images/arrow-090.png" /><br />
-			<img src="../../Themes/default/images/arrow-270.png" /><br />
-			<img src="../../Themes/default/images/exclamation-white.png" /><br />
-		</div>
-
-		<h2><a href="@Url.RouteUrl("Post", new { categorySlug = "my-category", postSlug = "post-title"})">{Post Title}</a></h2>
-		<p>Etiam porta sem malesuada magna mollis euismod. Integer posuere erat a ante venenatis
-			dapibus posuere. Etiam porta sem malesuada magna mollis euismod. &mdash; <span style="text-align: right;
-				font-size: smaller;"><em>12:59 PM 12/31/2011</em> in <a href="@Url.RouteUrl("Category", new { categorySlug = "placeholder-category" })" class="label">
-				Placeholder Category</span></a></p>
-
-		<div class="row">
-
-			<div class="span4">
-				<a class="btn" href="#">Add comment &raquo;</a></div>
-
-			<div class="span4" style="padding-top: 7px; text-align: right; font-size: smaller;">
-				<img src="../../Themes/default/images/balloon-white.png" />
-				<a href="#">999 comments</a></div>
-
-		</div>
-
+		@RenderPage("~/Views/Shared/_PostTile.cshtml", new { Size = "Large" })
 	</div>
 
 	<div class="span8">
-
-		<div style="padding-top: 25px; padding-left: 5px; padding-right: 5px; padding-bottom: 5px;
-			float: right; clear: left;">
-			<img src="../../Themes/default/images/arrow-090.png" /><br />
-			<img src="../../Themes/default/images/arrow-270.png" /><br />
-			<img src="../../Themes/default/images/exclamation-white.png" /><br />
-		</div>
-
-		<h2><a href="@Url.RouteUrl("Post", new { categorySlug = "my-category", postSlug = "post-title"})">{Post Title}</a></h2>
-		<p>Etiam porta sem malesuada magna mollis euismod. Integer posuere erat a ante venenatis
-			dapibus posuere. Etiam porta sem malesuada magna mollis euismod. &mdash; <span style="text-align: right;
-				font-size: smaller;"><em>12:59 PM 12/31/2011</em> in <a href="@Url.RouteUrl("Category", new { categorySlug = "placeholder-category" })" class="label">
-					Another Category</a></p>
-
-		<div class="row">
-
-			<div class="span4">
-				<a class="btn small" href="#">Add comment &raquo;</a></div>
-
-			<div class="span4" style="padding-top: 7px; text-align: right; font-size: smaller;">
-				<img src="../../Themes/default/images/balloon-white.png" />
-				<a href="#">999 comments</a></div>
-
-		</div>
-
+		@RenderPage("~/Views/Shared/_PostTile.cshtml", new { Size = "Large" })
 	</div>
 
 </div>
@@ -139,114 +43,19 @@
 <div class="row">
 
 	<div class="span4">
-
-		<div style="padding-top: 25px; padding-left: 5px; padding-right: 5px; padding-bottom: 5px;
-			float: right; clear: left;">
-			<img src="../../Themes/default/images/arrow-090.png" /><br />
-			<img src="../../Themes/default/images/arrow-270.png" /><br />
-			<img src="../../Themes/default/images/exclamation-white.png" /><br />
-		</div>
-
-		<h3><a href="@Url.RouteUrl("Post", new { categorySlug = "my-category", postSlug = "post-title"})">{Post Title}</a></h3>
-		<p>Etiam porta sem malesuada magna mollis euismod. Integer posuere erat a ante venenatis
-			dapibus posuere. &mdash; <span style="text-align: right; font-size: smaller;"><em>
-				12:59 PM 12/31/2011</em> in <a href="@Url.RouteUrl("Category", new { categorySlug = "placeholder-category" })" class="label">Example
-					Category</a></p>
-
-		<div class="row">
-
-			<div class="span2">
-				<a class="btn small" href="#">Add comment &raquo;</a></div>
-
-			<div class="span2" style="padding-top: 7px; text-align: right; font-size: smaller;">
-				<img src="../../Themes/default/images/balloon-white.png" />
-				<a href="#">999 comments</a></div>
-
-		</div>
-
+		@RenderPage("~/Views/Shared/_PostTile.cshtml", new { Size = "Small" })
 	</div>
 
 	<div class="span4">
-
-		<div style="padding-top: 25px; padding-left: 5px; padding-right: 5px; padding-bottom: 5px;
-			float: right; clear: left;">
-			<img src="../../Themes/default/images/arrow-090.png" /><br />
-			<img src="../../Themes/default/images/arrow-270.png" /><br />
-			<img src="../../Themes/default/images/exclamation-white.png" /><br />
-		</div>
-
-		<h3><a href="@Url.RouteUrl("Post", new { categorySlug = "my-category", postSlug = "post-title"})">{Post Title}</a></h3>
-		<p>Etiam porta sem malesuada magna mollis euismod. Integer posuere erat a ante venenatis
-			dapibus posuere. &mdash; <span style="text-align: right; font-size: smaller;"><em>
-				12:59 PM 12/31/2011</em> in <a href="@Url.RouteUrl("Category", new { categorySlug = "placeholder-category" })" class="label">Creative
-					Category</a></p>
-
-		<div class="row">
-
-			<div class="span2">
-				<a class="btn small" href="#">Add comment &raquo;</a></div>
-
-			<div class="span2" style="padding-top: 7px; text-align: right; font-size: smaller;">
-				<img src="../../Themes/default/images/balloon-white.png" />
-				<a href="#">999 comments</a></div>
-
-		</div>
-
+		@RenderPage("~/Views/Shared/_PostTile.cshtml", new { Size = "Small" })
 	</div>
 
 	<div class="span4">
-
-		<div style="padding-top: 25px; padding-left: 5px; padding-right: 5px; padding-bottom: 5px;
-			float: right; clear: left;">
-			<img src="../../Themes/default/images/arrow-090.png" /><br />
-			<img src="../../Themes/default/images/arrow-270.png" /><br />
-			<img src="../../Themes/default/images/exclamation-white.png" /><br />
-		</div>
-
-		<h3><a href="@Url.RouteUrl("Post", new { categorySlug = "my-category", postSlug = "post-title"})">{Post Title}</a></h3>
-		<p>Etiam porta sem malesuada magna mollis euismod. Integer posuere erat a ante venenatis
-			dapibus posuere. &mdash; <span style="text-align: right; font-size: smaller;"><em>
-				12:59 PM 12/31/2011</em> in <a href="@Url.RouteUrl("Category", new { categorySlug = "placeholder-category" })" class="label">Unmoderated
-					Forum</a></p>
-
-		<div class="row">
-
-			<div class="span2">
-				<a class="btn small" href="#">Add comment &raquo;</a></div>
-
-			<div class="span2" style="padding-top: 7px; text-align: right; font-size: smaller;">
-				<img src="../../Themes/default/images/balloon-white.png" />
-				<a href="#">999 comments</a></div>
-
-		</div>
-
+		@RenderPage("~/Views/Shared/_PostTile.cshtml", new { Size = "Small" })
 	</div>
 
 	<div class="span4">
-
-		<div style="padding-top: 25px; padding-left: 5px; padding-right: 5px; padding-bottom: 5px;
-			float: right; clear: left;">
-			<img src="../../Themes/default/images/arrow-090.png" /><br />
-			<img src="../../Themes/default/images/arrow-270.png" /><br />
-			<img src="../../Themes/default/images/exclamation-white.png" /><br />
-		</div>
-
-		<h3><a href="@Url.RouteUrl("Post", new { categorySlug = "my-category", postSlug = "post-title"})">{Post Title}</a></h3>
-		<p>Etiam porta sem malesuada magna mollis euismod. Integer posuere erat a ante venenatis
-			dapibus posuere. &mdash; <span style="text-align: right; font-size: smaller;"><em>
-				12:59 PM 12/31/2011</em> in <a href="@Url.RouteUrl("Category", new { categorySlug = "placeholder-category" })" class="label">Category</a></p>
-
-		<div class="row">
-
-			<div class="span2">
-				<a class="btn small" href="#">Add comment &raquo;</a></div>
-
-			<div class="span2" style="padding-top: 7px; text-align: right; font-size: smaller;">
-				<img src="../../Themes/default/images/balloon-white.png" />
-				<a href="#">999 comments</a></div>
-
-		</div>
-
+		@RenderPage("~/Views/Shared/_PostTile.cshtml", new { Size = "Small" })
 	</div>
 
 </div>
