--- a/assets/templates/forum-skeleton/ForumSkeletonMvc/Views/PostListing/Controversial.cshtml
+++ b/assets/templates/forum-skeleton/ForumSkeletonMvc/Views/PostListing/Controversial.cshtml
@@ -12,11 +12,11 @@
 <div class="row">
 
 	<div class="span8">
-		@RenderPage("_PostTile.cshtml", new { Size = "Large" })
+		@RenderPage("~/Views/Shared/_PostTile.cshtml", new { Size = "Large" })
 	</div>
 
 	<div class="span8">
-		@RenderPage("_PostTile.cshtml", new { Size = "Large" })
+		@RenderPage("~/Views/Shared/_PostTile.cshtml", new { Size = "Large" })
 	</div>
 
 </div>
@@ -26,19 +26,19 @@
 <div class="row">
 
 	<div class="span4">
-		@RenderPage("_PostTile.cshtml", new { Size = "Small" })
+		@RenderPage("~/Views/Shared/_PostTile.cshtml", new { Size = "Small" })
 	</div>
 
 	<div class="span4">
-		@RenderPage("_PostTile.cshtml", new { Size = "Small" })
+		@RenderPage("~/Views/Shared/_PostTile.cshtml", new { Size = "Small" })
 	</div>
 
 	<div class="span4">
-		@RenderPage("_PostTile.cshtml", new { Size = "Small" })
+		@RenderPage("~/Views/Shared/_PostTile.cshtml", new { Size = "Small" })
 	</div>
 
 	<div class="span4">
-		@RenderPage("_PostTile.cshtml", new { Size = "Small" })
+		@RenderPage("~/Views/Shared/_PostTile.cshtml", new { Size = "Small" })
 	</div>
 
 </div>
@@ -48,19 +48,19 @@
 <div class="row">
 
 	<div class="span4">
-		@RenderPage("_PostTile.cshtml", new { Size = "Small" })
+		@RenderPage("~/Views/Shared/_PostTile.cshtml", new { Size = "Small" })
 	</div>
 
 	<div class="span4">
-		@RenderPage("_PostTile.cshtml", new { Size = "Small" })
+		@RenderPage("~/Views/Shared/_PostTile.cshtml", new { Size = "Small" })
 	</div>
 
 	<div class="span4">
-		@RenderPage("_PostTile.cshtml", new { Size = "Small" })
+		@RenderPage("~/Views/Shared/_PostTile.cshtml", new { Size = "Small" })
 	</div>
 
 	<div class="span4">
-		@RenderPage("_PostTile.cshtml", new { Size = "Small" })
+		@RenderPage("~/Views/Shared/_PostTile.cshtml", new { Size = "Small" })
 	</div>
 
 </div>
