--- a/assets/templates/forum-skeleton/ForumSkeletonMvc/Views/Tag/Detail.cshtml
+++ b/assets/templates/forum-skeleton/ForumSkeletonMvc/Views/Tag/Detail.cshtml
@@ -3,239 +3,60 @@
 	Layout = "~/Views/Shared/_ForumLayout.cshtml";
 	ViewBag.TagsClass = "active";
 }
-			<ul class="breadcrumb">
-				<li><a href="@Url.RouteUrl("Home")">{Forum Name} Home</a> <span class="divider">/</span></li>
-				<li><a href="@Url.RouteUrl("Tags")">Tags</a> <span class="divider">/</span></li>
-				<li class="active">{Tag Name}</li>
-			</ul>
-			<h1>{Tag Name}</h1>
-			<hr />
-			<p><small>(Custom tag content.)</small></p>
+<ul class="breadcrumb">
+	<li><a href="@Url.RouteUrl("Home")">{Forum Name} Home</a> <span class="divider">/</span></li>
+	<li><a href="@Url.RouteUrl("Tags")">Tags</a> <span class="divider">/</span></li>
+	<li class="active">{Tag Name}</li>
+</ul>
+<h1>{Tag Name}</h1>
+<hr />
+<p><small>(Custom tag content.)</small></p>
 
-			<div class="row">
+<div class="row">
 
-				<div class="span8">
+	<div class="span8">
+		@RenderPage("~/Views/Shared/_PostTile.cshtml", new { Size = "Large" })
+	</div>
 
-					<div style="padding-top: 25px; padding-left: 5px; padding-right: 5px; padding-bottom: 5px;
-						float: right; clear: left;">
-						<img src="../../Themes/default/images/arrow-090.png" /><br />
-						<img src="../../Themes/default/images/arrow-270.png" /><br />
-						<img src="../../Themes/default/images/exclamation-white.png" /><br />
-					</div>
+	<div class="span8">
+		@RenderPage("~/Views/Shared/_PostTile.cshtml", new { Size = "Large" })
+	</div>
 
-					<h2><a href="@Url.RouteUrl("Post", new { categorySlug = "my-category", postSlug = "post-title"})">{Post Title}</a></h2>
-					<p>Etiam porta sem malesuada magna mollis euismod. Integer posuere erat a ante venenatis
-						dapibus posuere. Etiam porta sem malesuada magna mollis euismod. &mdash; <span style="text-align: right;
-							font-size: smaller;"><em>12:59 PM 12/31/2011</em> in <a href="@Url.Action("Category")" class="label">
-							Placeholder Category</span></a></p>
+</div>
 
-					<div class="row">
+<hr>
 
-						<div class="span4">
-							<a class="btn" href="#">Add comment &raquo;</a></div>
+<div class="row">
 
-						<div class="span4" style="padding-top: 7px; text-align: right; font-size: smaller;">
-							<img src="../../Themes/default/images/balloon-white.png" /> <a href="#">999 comments</a></div>
+	<div class="span8">
+		@RenderPage("~/Views/Shared/_PostTile.cshtml", new { Size = "Large" })
+	</div>
 
-					</div>
+	<div class="span8">
+		@RenderPage("~/Views/Shared/_PostTile.cshtml", new { Size = "Large" })
+	</div>
 
-				</div>
+</div>
 
-				<div class="span8">
+<hr>
 
-					<div style="padding-top: 25px; padding-left: 5px; padding-right: 5px; padding-bottom: 5px;
-						float: right; clear: left;">
-						<img src="images/thumb-up.png" /><br />
-						<img src="images/thumb-down.png" /><br />
-						<img src="images/exclamation-white.png" /><br />
-					</div>
+<div class="row">
 
-					<h2><a href="@Url.RouteUrl("Post", new { categorySlug = "my-category", postSlug = "post-title"})">{Post Title}</a></h2>
-					<p>Etiam porta sem malesuada magna mollis euismod. Integer posuere erat a ante venenatis
-						dapibus posuere. Etiam porta sem malesuada magna mollis euismod. &mdash; <span style="text-align: right;
-							font-size: smaller;"><em>12:59 PM 12/31/2011</em> in <a href="@Url.Action("Category")" class="label">
-								Another Category</a></p>
+	<div class="span4">
+		@RenderPage("~/Views/Shared/_PostTile.cshtml", new { Size = "Small" })
+	</div>
 
-					<div class="row">
+	<div class="span4">
+		@RenderPage("~/Views/Shared/_PostTile.cshtml", new { Size = "Small" })
+	</div>
 
-						<div class="span4">
-							<a class="btn small" href="#">Add comment &raquo;</a></div>
+	<div class="span4">
+		@RenderPage("~/Views/Shared/_PostTile.cshtml", new { Size = "Small" })
+	</div>
 
-						<div class="span4" style="padding-top: 7px; text-align: right; font-size: smaller;">
-							<img src="../../Themes/default/images/balloon-white.png" /> <a href="#">999 comments</a></div>
+	<div class="span4">
+		@RenderPage("~/Views/Shared/_PostTile.cshtml", new { Size = "Small" })
+	</div>
 
-					</div>
+</div>
 
-				</div>
-
-			</div>
-
-			<hr>
-
-			<div class="row">
-
-				<div class="span8">
-
-					<div style="padding-top: 25px; padding-left: 5px; padding-right: 5px; padding-bottom: 5px;
-						float: right; clear: left;">
-						<img src="../../Themes/default/images/arrow-090.png" /><br />
-						<img src="../../Themes/default/images/arrow-270.png" /><br />
-						<img src="../../Themes/default/images/exclamation-white.png" /><br />
-					</div>
-
-					<h2><a href="@Url.RouteUrl("Post", new { categorySlug = "my-category", postSlug = "post-title"})">{Post Title}</a></h2>
-					<p>Etiam porta sem malesuada magna mollis euismod. Integer posuere erat a ante venenatis
-						dapibus posuere. Etiam porta sem malesuada magna mollis euismod. &mdash; <span style="text-align: right;
-							font-size: smaller;"><em>12:59 PM 12/31/2011</em> in <a href="@Url.Action("Category")" class="label">
-							Placeholder Category</span></a></p>
-
-					<div class="row">
-
-						<div class="span4">
-							<a class="btn" href="#">Add comment &raquo;</a></div>
-
-						<div class="span4" style="padding-top: 7px; text-align: right; font-size: smaller;">
-							<img src="../../Themes/default/images/balloon-white.png" /> <a href="#">999 comments</a></div>
-
-					</div>
-
-				</div>
-
-				<div class="span8">
-
-					<div style="padding-top: 25px; padding-left: 5px; padding-right: 5px; padding-bottom: 5px;
-						float: right; clear: left;">
-						<img src="../../Themes/default/images/arrow-090.png" /><br />
-						<img src="../../Themes/default/images/arrow-270.png" /><br />
-						<img src="../../Themes/default/images/exclamation-white.png" /><br />
-					</div>
-
-					<h2><a href="@Url.RouteUrl("Post", new { categorySlug = "my-category", postSlug = "post-title"})">{Post Title}</a></h2>
-					<p>Etiam porta sem malesuada magna mollis euismod. Integer posuere erat a ante venenatis
-						dapibus posuere. Etiam porta sem malesuada magna mollis euismod. &mdash; <span style="text-align: right;
-							font-size: smaller;"><em>12:59 PM 12/31/2011</em> in <a href="@Url.Action("Category")" class="label">
-								Another Category</a></p>
-
-					<div class="row">
-
-						<div class="span4">
-							<a class="btn small" href="#">Add comment &raquo;</a></div>
-
-						<div class="span4" style="padding-top: 7px; text-align: right; font-size: smaller;">
-							<img src="../../Themes/default/images/balloon-white.png" /> <a href="#">999 comments</a></div>
-
-					</div>
-
-				</div>
-
-			</div>
-
-			<hr>
-
-			<div class="row">
-
-				<div class="span4">
-
-					<div style="padding-top: 25px; padding-left: 5px; padding-right: 5px; padding-bottom: 5px;
-						float: right; clear: left;">
-						<img src="../../Themes/default/images/arrow-090.png" /><br />
-						<img src="../../Themes/default/images/arrow-270.png" /><br />
-						<img src="../../Themes/default/images/exclamation-white.png" /><br />
-					</div>
-
-					<h3><a href="@Url.RouteUrl("Post", new { categorySlug = "my-category", postSlug = "post-title"})">{Post Title}</a></h3>
-					<p>Etiam porta sem malesuada magna mollis euismod. Integer posuere erat a ante venenatis
-						dapibus posuere. &mdash; <span style="text-align: right; font-size: smaller;"><em>
-							12:59 PM 12/31/2011</em> in <a href="@Url.Action("Category")" class="label">Example Category</a></p>
-
-					<div class="row">
-
-						<div class="span2">
-							<a class="btn small" href="#">Add comment &raquo;</a></div>
-
-						<div class="span2" style="padding-top: 7px; text-align: right; font-size: smaller;">
-							<img src="../../Themes/default/images/balloon-white.png" /> <a href="#">999 comments</a></div>
-
-					</div>
-
-				</div>
-
-				<div class="span4">
-
-					<div style="padding-top: 25px; padding-left: 5px; padding-right: 5px; padding-bottom: 5px;
-						float: right; clear: left;">
-						<img src="../../Themes/default/images/arrow-090.png" /><br />
-						<img src="../../Themes/default/images/arrow-270.png" /><br />
-						<img src="../../Themes/default/images/exclamation-white.png" /><br />
-					</div>
-
-					<h3><a href="@Url.RouteUrl("Post", new { categorySlug = "my-category", postSlug = "post-title"})">{Post Title}</a></h3>
-					<p>Etiam porta sem malesuada magna mollis euismod. Integer posuere erat a ante venenatis
-						dapibus posuere. &mdash; <span style="text-align: right; font-size: smaller;"><em>
-							12:59 PM 12/31/2011</em> in <a href="@Url.Action("Category")" class="label">Creative Category</a></p>
-
-					<div class="row">
-
-						<div class="span2">
-							<a class="btn small" href="#">Add comment &raquo;</a></div>
-
-						<div class="span2" style="padding-top: 7px; text-align: right; font-size: smaller;">
-							<img src="../../Themes/default/images/balloon-white.png" /> <a href="#">999 comments</a></div>
-
-					</div>
-
-				</div>
-
-				<div class="span4">
-
-					<div style="padding-top: 25px; padding-left: 5px; padding-right: 5px; padding-bottom: 5px;
-						float: right; clear: left;">
-						<img src="../../Themes/default/images/arrow-090.png" /><br />
-						<img src="../../Themes/default/images/arrow-270.png" /><br />
-						<img src="../../Themes/default/images/exclamation-white.png" /><br />
-					</div>
-
-					<h3><a href="@Url.RouteUrl("Post", new { categorySlug = "my-category", postSlug = "post-title"})">{Post Title}</a></h3>
-					<p>Etiam porta sem malesuada magna mollis euismod. Integer posuere erat a ante venenatis
-						dapibus posuere. &mdash; <span style="text-align: right; font-size: smaller;"><em>
-							12:59 PM 12/31/2011</em> in <a href="@Url.Action("Category")" class="label">Unmoderated Forum</a></p>
-
-					<div class="row">
-
-						<div class="span2">
-							<a class="btn small" href="#">Add comment &raquo;</a></div>
-
-						<div class="span2" style="padding-top: 7px; text-align: right; font-size: smaller;">
-							<img src="../../Themes/default/images/balloon-white.png" /> <a href="#">999 comments</a></div>
-
-					</div>
-
-				</div>
-
-				<div class="span4">
-
-					<div style="padding-top: 25px; padding-left: 5px; padding-right: 5px; padding-bottom: 5px;
-						float: right; clear: left;">
-						<img src="../../Themes/default/images/arrow-090.png" /><br />
-						<img src="../../Themes/default/images/arrow-270.png" /><br />
-						<img src="../../Themes/default/images/exclamation-white.png" /><br />
-					</div>
-
-					<h3><a href="@Url.RouteUrl("Post", new { categorySlug = "my-category", postSlug = "post-title"})">{Post Title}</a></h3>
-					<p>Etiam porta sem malesuada magna mollis euismod. Integer posuere erat a ante venenatis
-						dapibus posuere. &mdash; <span style="text-align: right; font-size: smaller;"><em>
-							12:59 PM 12/31/2011</em> in <a href="@Url.Action("Category")" class="label">Category</a></p>
-
-					<div class="row">
-
-						<div class="span2">
-							<a class="btn small" href="#">Add comment &raquo;</a></div>
-
-						<div class="span2" style="padding-top: 7px; text-align: right; font-size: smaller;">
-							<img src="../../Themes/default/images/balloon-white.png" /> <a href="#">999 comments</a></div>
-
-					</div>
-
-				</div>
-
-			</div>
