categories and tags screens now use post tile to display posts, this means that now everywhere a post shows up, with the exception of the post page itself, it's rendered through the post tile partial

--- a/assets/templates/forum-skeleton/ForumSkeletonMvc/Views/Tag/All.cshtml
+++ b/assets/templates/forum-skeleton/ForumSkeletonMvc/Views/Tag/All.cshtml
@@ -15,81 +15,30 @@
 	<div class="span5">
 		<h2><a href="@Url.RouteUrl("Tag", new { tagSlug = "tag" })">{Tag Name}</a></h2>
 		<p>A brief description of the tag.</p>
-		<dl>
-			<dt><a href="@Url.RouteUrl("Post", new { categorySlug = "my-category", postSlug = "post-title"})">{Post title}</a></dt>
-			<dd>A truncated post body. Etiam porta sem malesuada magna mollis euismod.<br />
-				<span style="font-size: smaller;"><em>Three hours ago</em> by <a href="#">username</a>
-					with 33 comments.</span></dd>
-			<dt><a href="@Url.RouteUrl("Post", new { categorySlug = "my-category", postSlug = "post-title"})">{Post title}</a></dt>
-			<dd>Etiam porta sem malesuada magna mollis euismod.<br />
-				<span style="font-size: smaller;"><em>Three hours ago</em> by <a href="#">username</a>
-					with 33 comments.</span></dd>
-			<dt><a href="@Url.RouteUrl("Post", new { categorySlug = "my-category", postSlug = "post-title"})">{Post title}</a></dt>
-			<dd>Etiam porta sem malesuada magna mollis euismod. Integer posuere erat a ante venenatis
-				dapibus posuere.
-				<br />
-				<span style="font-size: smaller;"><em>Three hours ago</em> by <a href="#">username</a>
-					with 33 comments.</span></dd>
-			<dt><a href="@Url.RouteUrl("Post", new { categorySlug = "my-category", postSlug = "post-title"})">{Post title}</a></dt>
-			<dd>Etiam porta sem malesuada magna mollis euismod. Integer posuere erat a ante.
-				<br />
-				<span style="font-size: smaller;"><em>Three hours ago</em> by <a href="#">username</a>
-					with 33 comments.</span></dd>
-		</dl>
+		@for (int i = 1; i < 5; i++)
+	{
+			@RenderPage("~/Views/Shared/PostTile.cshtml", new { Size = "Medium", Mode = "Condensed" })
+	}
 		<a href="#">View</a> 33 more posts.
 	</div>
 
 	<div class="span5">
 		<h2><a href="@Url.RouteUrl("Tag", new { tagSlug = "tag" })">{Tag Name}</a></h2>
 		<p>A brief description of the tag.</p>
-		<dl>
-			<dt><a href="@Url.RouteUrl("Post", new { categorySlug = "my-category", postSlug = "post-title"})">{Post title}</a></dt>
-			<dd>A truncated post body. Etiam porta sem malesuada magna mollis euismod.<br />
-				<span style="font-size: smaller;"><em>Three hours ago</em> by <a href="#">username</a>
-					with 33 comments.</span></dd>
-			<dt><a href="@Url.RouteUrl("Post", new { categorySlug = "my-category", postSlug = "post-title"})">{Post title}</a></dt>
-			<dd>Etiam porta sem malesuada magna mollis euismod.<br />
-				<span style="font-size: smaller;"><em>Three hours ago</em> by <a href="#">username</a>
-					with 33 comments.</span></dd>
-			<dt><a href="@Url.RouteUrl("Post", new { categorySlug = "my-category", postSlug = "post-title"})">{Post title}</a></dt>
-			<dd>Etiam porta sem malesuada magna mollis euismod. Integer posuere erat a ante venenatis
-				dapibus posuere.
-				<br />
-				<span style="font-size: smaller;"><em>Three hours ago</em> by <a href="#">username</a>
-					with 33 comments.</span></dd>
-			<dt><a href="@Url.RouteUrl("Post", new { categorySlug = "my-category", postSlug = "post-title"})">{Post title}</a></dt>
-			<dd>Etiam porta sem malesuada magna mollis euismod. Integer posuere erat a ante.
-				<br />
-				<span style="font-size: smaller;"><em>Three hours ago</em> by <a href="#">username</a>
-					with 33 comments.</span></dd>
-		</dl>
+		@for (int i = 1; i < 5; i++)
+	{
+			@RenderPage("~/Views/Shared/PostTile.cshtml", new { Size = "Medium", Mode = "Condensed" })
+	}
 		<a href="#">View</a> 33 more posts.
 	</div>
 
 	<div class="span5">
 		<h2><a href="@Url.RouteUrl("Tag", new { tagSlug = "tag" })">{Tag Name}</a></h2>
 		<p>A brief description of the tag.</p>
-		<dl>
-			<dt><a href="@Url.RouteUrl("Post", new { categorySlug = "my-category", postSlug = "post-title"})">{Post title}</a></dt>
-			<dd>A truncated post body. Etiam porta sem malesuada magna mollis euismod.<br />
-				<span style="font-size: smaller;"><em>Three hours ago</em> by <a href="#">username</a>
-					with 33 comments.</span></dd>
-			<dt><a href="@Url.RouteUrl("Post", new { categorySlug = "my-category", postSlug = "post-title"})">{Post title}</a></dt>
-			<dd>Etiam porta sem malesuada magna mollis euismod.<br />
-				<span style="font-size: smaller;"><em>Three hours ago</em> by <a href="#">username</a>
-					with 33 comments.</span></dd>
-			<dt><a href="@Url.RouteUrl("Post", new { categorySlug = "my-category", postSlug = "post-title"})">{Post title}</a></dt>
-			<dd>Etiam porta sem malesuada magna mollis euismod. Integer posuere erat a ante venenatis
-				dapibus posuere.
-				<br />
-				<span style="font-size: smaller;"><em>Three hours ago</em> by <a href="#">username</a>
-					with 33 comments.</span></dd>
-			<dt><a href="@Url.RouteUrl("Post", new { categorySlug = "my-category", postSlug = "post-title"})">{Post title}</a></dt>
-			<dd>Etiam porta sem malesuada magna mollis euismod. Integer posuere erat a ante.
-				<br />
-				<span style="font-size: smaller;"><em>Three hours ago</em> by <a href="#">username</a>
-					with 33 comments.</span></dd>
-		</dl>
+		@for (int i = 1; i < 5; i++)
+	{
+			@RenderPage("~/Views/Shared/PostTile.cshtml", new { Size = "Medium", Mode = "Condensed" })
+	}
 		<a href="#">View</a> 33 more posts.
 	</div>
 
@@ -99,71 +48,43 @@
 
 <div class="row">
 
-	<div class="span4" style="font-size: smaller;">
+	<div class="span4" style="font-size: small;">
 		<h3><a href="@Url.RouteUrl("Tag", new { tagSlug = "tag" })">{Tag Name}</a></h3>
-		<p>A brief description of the tag.</p>
-		<dl>
-			<dt><a href="@Url.RouteUrl("Post", new { categorySlug = "my-category", postSlug = "post-title"})">{Post title}</a></dt>
-			<dd>A severely truncated post body.<br />
-				<span style="font-size: smaller;"><em>Three hours ago</em> by <a href="#">username</a>
-					with 33 comments.</span></dd>
-			<dt><a href="@Url.RouteUrl("Post", new { categorySlug = "my-category", postSlug = "post-title"})">{Post title}</a></dt>
-			<dd>Etiam porta sem malesuada magna mollis euismod.
-				<br />
-				<span style="font-size: smaller;"><em>Three hours ago</em> by <a href="#">username</a>
-					with 33 comments.</span></dd>
-		</dl>
+		<p style="font-size: smaller;">A brief description of the tag.</p>
+		@for (int i = 1; i < 3; i++)
+	{
+			@RenderPage("~/Views/Shared/PostTile.cshtml", new { Size = "Small", Mode = "Condensed" })
+	}
 		<a href="#">View</a> 33 more posts.
 	</div>
 
-	<div class="span4" style="font-size: smaller;">
+	<div class="span4" style="font-size: small;">
 		<h3><a href="@Url.RouteUrl("Tag", new { tagSlug = "tag" })">{Tag Name}</a></h3>
 		<p style="font-size: smaller;">A brief description of the tag.</p>
-		<dl>
-			<dt><a href="@Url.RouteUrl("Post", new { categorySlug = "my-category", postSlug = "post-title"})">{Post title}</a></dt>
-			<dd>A severely truncated post body.<br />
-				<span style="font-size: smaller;"><em>Three hours ago</em> by <a href="#">username</a>
-					with 33 comments.</span></dd>
-			<dt><a href="@Url.RouteUrl("Post", new { categorySlug = "my-category", postSlug = "post-title"})">{Post title}</a></dt>
-			<dd>Etiam porta sem malesuada magna mollis euismod.
-				<br />
-				<span style="font-size: smaller;"><em>Three hours ago</em> by <a href="#">username</a>
-					with 33 comments.</span></dd>
-		</dl>
+		@for (int i = 1; i < 3; i++)
+	{
+			@RenderPage("~/Views/Shared/PostTile.cshtml", new { Size = "Small", Mode = "Condensed" })
+	}
 		<a href="#">View</a> 33 more posts.
 	</div>
 
-	<div class="span4" style="font-size: smaller;">
+	<div class="span4" style="font-size: small;">
 		<h3><a href="@Url.RouteUrl("Tag", new { tagSlug = "tag" })">{Tag Name}</a></h3>
 		<p style="font-size: smaller;">A brief description of the tag.</p>
-		<dl>
-			<dt><a href="@Url.RouteUrl("Post", new { categorySlug = "my-category", postSlug = "post-title"})">{Post title}</a></dt>
-			<dd>A severely truncated post body.<br />
-				<span style="font-size: smaller;"><em>Three hours ago</em> by <a href="#">username</a>
-					with 33 comments.</span></dd>
-			<dt><a href="@Url.RouteUrl("Post", new { categorySlug = "my-category", postSlug = "post-title"})">{Post title}</a></dt>
-			<dd>Etiam porta sem malesuada magna mollis euismod.
-				<br />
-				<span style="font-size: smaller;"><em>Three hours ago</em> by <a href="#">username</a>
-					with 33 comments.</span></dd>
-		</dl>
+		@for (int i = 1; i < 3; i++)
+	{
+			@RenderPage("~/Views/Shared/PostTile.cshtml", new { Size = "Small", Mode = "Condensed" })
+	}
 		<a href="#">View</a> 33 more posts.
 	</div>
 
-	<div class="span4" style="font-size: smaller;">
+	<div class="span4" style="font-size: small;">
 		<h3><a href="@Url.RouteUrl("Tag", new { tagSlug = "tag" })">{Tag Name}</a></h3>
 		<p style="font-size: smaller;">A brief description of the tag.</p>
-		<dl>
-			<dt><a href="@Url.RouteUrl("Post", new { categorySlug = "my-category", postSlug = "post-title"})">{Post title}</a></dt>
-			<dd>A severely truncated post body.<br />
-				<span style="font-size: smaller;"><em>Three hours ago</em> by <a href="#">username</a>
-					with 33 comments.</span></dd>
-			<dt><a href="@Url.RouteUrl("Post", new { categorySlug = "my-category", postSlug = "post-title"})">{Post title}</a></dt>
-			<dd>Etiam porta sem malesuada magna mollis euismod.
-				<br />
-				<span style="font-size: smaller;"><em>Three hours ago</em> by <a href="#">username</a>
-					with 33 comments.</span></dd>
-		</dl>
+		@for (int i = 1; i < 3; i++)
+	{
+			@RenderPage("~/Views/Shared/PostTile.cshtml", new { Size = "Small", Mode = "Condensed" })
+	}
 		<a href="#">View</a> 33 more posts.
 	</div>
 
