added basic view models

--- a/assets/templates/forum-skeleton/ForumSkeletonMvc/Views/Category/All.cshtml
+++ b/assets/templates/forum-skeleton/ForumSkeletonMvc/Views/Category/All.cshtml
@@ -1,4 +1,6 @@
-﻿@{
+﻿@using ForumSkeletonMvc.ViewModels.Category
+@model AllCategoriesViewModel
+@{
 	ViewBag.Title = "{Forum Name} - Categories";
 	Layout = "~/Views/Shared/_ForumLayout.cshtml";
 	ViewBag.CategoriesClass = "active";
