--- a/assets/templates/forum-skeleton/ForumSkeletonMvc/Views/Pages/Info.cshtml
+++ b/assets/templates/forum-skeleton/ForumSkeletonMvc/Views/Pages/Info.cshtml
@@ -1,4 +1,6 @@
-﻿@{
+﻿@using ForumSkeletonMvc.ViewModels.Pages
+@model InfoPageViewModel
+@{
 	ViewBag.Title = "{Forum Name} Info";
 	Layout = "~/Views/Shared/_ForumLayout.cshtml";
 	ViewBag.InfoClass = "active";
