--- a/assets/templates/forum-skeleton/ForumSkeletonMvc/Views/Post/Create.cshtml
+++ b/assets/templates/forum-skeleton/ForumSkeletonMvc/Views/Post/Create.cshtml
@@ -1,4 +1,6 @@
-﻿<form>
+﻿@using ForumSkeletonMvc.ViewModels.Post
+@model CreatePostViewModel
+<form>
 <fieldset>
 	<div class="clearfix">
 		<label for="username">
