--- a/assets/templates/forum-skeleton/ForumSkeletonMvc/Views/PostListing/All.cshtml
+++ b/assets/templates/forum-skeleton/ForumSkeletonMvc/Views/PostListing/All.cshtml
@@ -1,4 +1,6 @@
-﻿@{
+﻿@using ForumSkeletonMvc.ViewModels.PostListing
+@model AllPostsViewModel
+@{
 	ViewBag.Title = "{Forum Name} - All Posts";
 	Layout = "~/Views/Shared/_ForumLayout.cshtml";
 }
