--- a/assets/templates/forum-skeleton/ForumSkeletonMvc/Views/PostListing/Controversial.cshtml
+++ b/assets/templates/forum-skeleton/ForumSkeletonMvc/Views/PostListing/Controversial.cshtml
@@ -1,4 +1,6 @@
-﻿@{
+﻿@using ForumSkeletonMvc.ViewModels.PostListing
+@model ControversialPostsViewModel
+@{
 	ViewBag.Title = "{Forum Name} - Controversial Posts";
 	Layout = "~/Views/Shared/_ForumLayout.cshtml";
 }
