--- a/assets/templates/forum-skeleton/ForumSkeletonMvc/Views/PostListing/Popular.cshtml
+++ b/assets/templates/forum-skeleton/ForumSkeletonMvc/Views/PostListing/Popular.cshtml
@@ -1,4 +1,6 @@
-﻿@{
+﻿@using ForumSkeletonMvc.ViewModels.PostListing
+@model PopularPostsViewModel
+@{
 	ViewBag.Title = "{Forum Name} Home";
 	Layout = "~/Views/Shared/_ForumLayout.cshtml";
 }
