--- a/assets/templates/forum-skeleton/ForumSkeletonMvc/Views/Profile/All.cshtml
+++ b/assets/templates/forum-skeleton/ForumSkeletonMvc/Views/Profile/All.cshtml
@@ -1,4 +1,6 @@
-﻿@{
+﻿@using ForumSkeletonMvc.ViewModels.Profile
+@model AllProfilesViewModel
+@{
 	ViewBag.Title = "{Forum Name} - All Users";
 	Layout = "~/Views/Shared/_ForumLayout.cshtml";
 }
