--- a/assets/templates/forum-skeleton/ForumSkeletonMvc/Views/Profile/Badges.cshtml
+++ b/assets/templates/forum-skeleton/ForumSkeletonMvc/Views/Profile/Badges.cshtml
@@ -1,4 +1,6 @@
-﻿@{
+﻿@using ForumSkeletonMvc.ViewModels.Profile
+@model ProfileBadgesViewModel
+@{
 	ViewBag.Title = "{Forum Name} - {Username}'s Badges";
 	Layout = "~/Views/Shared/_ForumLayout.cshtml";
 	ViewBag.ProfileBadgesClass = "active";
