--- a/assets/templates/forum-skeleton/ForumSkeletonMvc/Views/Profile/Overview.cshtml
+++ b/assets/templates/forum-skeleton/ForumSkeletonMvc/Views/Profile/Overview.cshtml
@@ -1,4 +1,6 @@
-﻿@{
+﻿@using ForumSkeletonMvc.ViewModels.Profile
+@model ProfileOverviewViewModel
+@{
 	ViewBag.Title = "{Forum Name} - {Username}'s Profile";
 	Layout = "~/Views/Shared/_ForumLayout.cshtml";
 	ViewBag.ProfileOverviewClass = "active";
