--- a/assets/templates/forum-skeleton/ForumSkeletonMvc/Views/Profile/RecentActivity.cshtml
+++ b/assets/templates/forum-skeleton/ForumSkeletonMvc/Views/Profile/RecentActivity.cshtml
@@ -1,4 +1,6 @@
-﻿@{
+﻿@using ForumSkeletonMvc.ViewModels.Profile
+@model ProfileRecentActivityViewModel
+@{
 	ViewBag.Title = "{Forum Name} - {Username}'s Recent Activity";
 	Layout = "~/Views/Shared/_ForumLayout.cshtml";
 	ViewBag.ProfileRecentActivityClass = "active";
