--- a/assets/templates/forum-skeleton/ForumSkeletonMvc/Views/Tag/Detail.cshtml
+++ b/assets/templates/forum-skeleton/ForumSkeletonMvc/Views/Tag/Detail.cshtml
@@ -1,4 +1,6 @@
-﻿@{
+﻿@using ForumSkeletonMvc.ViewModels.Tag
+@model TagDetailViewModel
+@{
 	ViewBag.Title = "{Forum Name} - {Tag Name}";
 	Layout = "~/Views/Shared/_ForumLayout.cshtml";
 	ViewBag.TagsClass = "active";
