--- a/assets/templates/forum-skeleton/ForumSkeletonMvc/Views/Category/Detail.cshtml
+++ b/assets/templates/forum-skeleton/ForumSkeletonMvc/Views/Category/Detail.cshtml
@@ -1,4 +1,6 @@
-﻿@{
+﻿@using ForumSkeletonMvc.ViewModels.Category
+@model CategoryDetailsViewModel
+@{
 	ViewBag.Title = "{Forum Name} - {Category Name}";
 	Layout = "~/Views/Shared/_ForumLayout.cshtml";
 	ViewBag.CategoriesClass = "active";
