--- a/assets/templates/forum-skeleton/ForumSkeletonMvc/Views/Post/Detail.cshtml
+++ b/assets/templates/forum-skeleton/ForumSkeletonMvc/Views/Post/Detail.cshtml
@@ -1,4 +1,6 @@
-﻿@{
+﻿@using ForumSkeletonMvc.ViewModels.Post
+@model PostDetailViewModel
+@{
 	ViewBag.Title = "{Forum Name} - {Post Name}";
 	Layout = "~/Views/Shared/_ForumLayout.cshtml";
 }
