--- a/assets/templates/forum-skeleton/ForumSkeletonMvc/Views/Profile/Favorites.cshtml
+++ b/assets/templates/forum-skeleton/ForumSkeletonMvc/Views/Profile/Favorites.cshtml
@@ -1,4 +1,6 @@
-﻿@{
+﻿@using ForumSkeletonMvc.ViewModels.Profile
+@model ProfileFavoritesViewModel
+@{
 	ViewBag.Title = "{Forum Name} - {Username}'s Favorites";
 	Layout = "~/Views/Shared/_ForumLayout.cshtml";
 	ViewBag.ProfileFavoritesClass = "active";
