--- a/assets/templates/forum-skeleton/ForumSkeletonMvc/Views/Profile/Friends.cshtml
+++ b/assets/templates/forum-skeleton/ForumSkeletonMvc/Views/Profile/Friends.cshtml
@@ -1,4 +1,6 @@
-﻿@{
+﻿@using ForumSkeletonMvc.ViewModels.Profile
+@model ProfileFriendsViewModel
+@{
 	ViewBag.Title = "{Forum Name} - {Username}'s Friends";
 	Layout = "~/Views/Shared/_ForumLayout.cshtml";
 	ViewBag.ProfileFriendsClass = "active";
