--- a/assets/templates/forum-skeleton/ForumSkeletonMvc/Views/Tag/All.cshtml
+++ b/assets/templates/forum-skeleton/ForumSkeletonMvc/Views/Tag/All.cshtml
@@ -1,4 +1,6 @@
-﻿@{
+﻿@using ForumSkeletonMvc.ViewModels.Tag
+@model AllTagsViewModel
+@{
 	ViewBag.Title = "{Forum Name} - Tags";
 	Layout = "~/Views/Shared/_ForumLayout.cshtml";
 	ViewBag.TagsClass = "active";
