--- a/apps/AdminComposite/Views/Shared/_Layout.cshtml
+++ b/apps/AdminComposite/Views/Shared/_Layout.cshtml
@@ -11,6 +11,7 @@
 		<link rel="shortcut icon" href="@Url.Content("~/Content/chromatron/img/favicon.ico")">
 		<link rel="apple-touch-icon" href="@Url.Content("~/Content/chromatron/img/apple-touch-icon.png")">
 
+		<link href="@Url.Content("/CompositeInspector/styles/euclid-default-styles.css")" rel="stylesheet" type="text/css" />
 		<link href="@Url.Content("~/Content/chromatron/css/style.css")" rel="stylesheet" type="text/css"/>
 		<link href="@Url.Content("~/Content/chromatron/css/colors.css")" rel="stylesheet" type="text/css"/>
 		<link href="@Url.Content("~/Content/chromatron/css/jquery.datatables.css")" rel="stylesheet" type="text/css"/>
@@ -26,7 +27,6 @@
 		<link href='http://fonts.googleapis.com/css?family=PT+Sans:regular,italic,bold,bolditalic' rel='stylesheet' type='text/css'> 
 		<link href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.7.1/themes/base/jquery-ui.css" rel="stylesheet" type="text/css" >
 
-		<script src="@Url.Content("~/Content/euclid.js")" type="text/javascript"> </script>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js" type="text/javascript"> </script>
 		<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.min.js" type="text/javascript"> </script>
 		<script src="@Url.Content("~/Content/chromatron/js/jquery/jquery.fullcalendar.min.js")" type="text/javascript"> </script>
@@ -46,6 +46,7 @@
 		<script src="@Url.Content("~/Content/jquery.url-encode.js")" type="text/javascript"> </script>
 		<script src="@Url.Content("~/Content/jeditable/jquery.jeditable.js")" type="text/javascript"> </script>
 		<script src="@Url.Content("~/Content//viewport/jquery.viewport.js")" type="text/javascript"> </script>
+		<script src="@Url.Content("~/CompositeInspector/scripts/euclid.js")" type="text/javascript"> </script>
 	</head>
 	<body>
 		<div>
