--- a/src/sdk/CompositeInspector/Content/Styles/euclid-default-styles.css
+++ b/src/sdk/CompositeInspector/Content/Styles/euclid-default-styles.css
@@ -1,16 +1,24 @@
-﻿body {
-	padding-top: 40px !important;
-}
-
-.composite-inspector-body
+﻿.close 
 {
-    margin: 10px;
+	float: right;
+	width: 25px;
+	height: 25px;
+	font-size: x-large;
+	text-transform: uppercase;
+	font-weight:bold;
+	top: 12px;
+	left: 12px;
 }
 
-.guid-input {
-    width: 250px;
+.error-message 
+{
+	position:relative;
+	z-index:9999;
+	border: 1px black solid;
+	width:100%;
+	background-color: #FF6666;
+	color: #331414;
+	margin-top:2px;
+	margin-bottom:2px;
 }
 
-.footer .column {
-	background-color: #F8F8F8;
-}
