--- a/src/sdk/CompositeInspector/Views/Composite/Index.cshtml
+++ b/src/sdk/CompositeInspector/Views/Composite/Index.cshtml
@@ -53,9 +53,14 @@
 			<ul>
 				@foreach (var cAndI in Model.CommandsAndInputModels)
 				{
-					<li><a href="@Url.Action("ViewInputModelForCommand", "Agents", new { cAndI.AgentSystemName, PartName = cAndI.Command.Name })">
-								@cAndI.InputModel.Name
-							</a></li>
+					<li>
+						<a href="@Url.Action("ViewInputModelForCommand", "Agents", new { PartName = cAndI.Command.Name, Format="html"})">@cAndI.InputModel.Name</a>
+						(
+						<a href="@Url.Action("ViewInputModelForCommand", "Agents", new { PartName = cAndI.Command.Name, Format = "json"})">json</a>
+						|
+						<a href="@Url.Action("ViewInputModelForCommand", "Agents", new { PartName = cAndI.Command.Name, Format = "xml"})">xml</a>
+						)
+					</li>
 				}
 			</ul>
 		}
